@@ -1,1 +1,6 @@
 <div id="test_node">22<span id="span_1"></span><span id="span_2"></span></div>
+<div id="ie_nodelist_issues" >
+  <div id="length"></div>
+  <div id="size"></div>
+  <div id="filler"></div>
+</div>
