@@ -66,4 +66,10 @@
     <input type="hidden" id="commaTwo" name="foo2" value="oops" />
   </form>
   <div id="counted_container"><div class="is_counted"></div></div>
+  
+  <div id="ie_nodelist_issues" >
+    <div id="length"></div>
+    <div id="size"></div>
+    <div id="filler"></div>
+  </div>
 </div>
